EMS-Upgrade: Fixed deprecation warnings resulted after upgrade to SB 3.0.1